--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.6.1",
     "reflect-metadata": "^0.2.0",
